Fix overflowing search bar and content, breaking word in filter title instead

--- a/packages/pxweb2/src/app/components/FilterSidebar/FilterSidebar.module.scss
+++ b/packages/pxweb2/src/app/components/FilterSidebar/FilterSidebar.module.scss
@@ -69,11 +69,14 @@
   overflow-x: hidden;
   scrollbar-width: 3px;
   z-index: 10;
+  word-break: break-word;
 
   // Set container height to show 11.5 items. They are 44px tall.
   height: calc((44px * 11.5));
 }
 
 .variablesSearchBox {
+  max-width: 408px;
+
   padding: 8px 3px 0px 8px;
 }
